--- a/app/src/main/res/layout/activity_grados.xml
+++ b/app/src/main/res/layout/activity_grados.xml
@@ -29,23 +29,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginHorizontal="23dp"
             android:orientation="vertical">
 
             <!-- Input -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
                     android:text="Grados"/>
                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/inputGrados"
+                    android:textSize="14dp"
                     android:hint="Insertar grados"/>
 
             </LinearLayout>
@@ -54,6 +57,7 @@
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:id="@+id/rgGrados">
 
                 <RadioButton
@@ -71,36 +75,46 @@
             <!-- Result -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="40dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
                     android:text="Resultado"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="_____"
                     android:id="@+id/txtResult"/>
             </LinearLayout>
 
             <!-- Buttons -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center">
 
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/btn_grados"
+                    android:layout_marginRight="10dp"
                     android:id="@+id/btnCalcular"
                     android:text="Calcular"/>
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/btn_grados"
+                    android:layout_marginRight="10dp"
                     android:id="@+id/btnLimpiar"
                     android:text="Limpiar"/>
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/btn_grados"
                     android:id="@+id/btnRegresar"
                     android:text="Regresar"/>
             </LinearLayout>
