--- a/app/src/main/res/layout/activity_main_cotizacion.xml
+++ b/app/src/main/res/layout/activity_main_cotizacion.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical">
             <!--        Client data -->
             <LinearLayout
@@ -27,12 +28,12 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="horizontal">
-                <EditText
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:text="Cliente: "/>
-                <EditText
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/outClient"/>
@@ -116,6 +117,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal">
                 <Button
                     android:layout_width="120dp"
