--- a/app/src/main/res/layout/activity_menu_cotizacion.xml
+++ b/app/src/main/res/layout/activity_menu_cotizacion.xml
@@ -65,6 +65,11 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/btnNext"
                     android:text="IR A COTIZACIÓN"/>
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnRegresar"
+                    android:text="Regresar"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
