--- a/app/src/main/res/layout/activity_convertidor.xml
+++ b/app/src/main/res/layout/activity_convertidor.xml
@@ -47,6 +47,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/inMonedas"
+                android:inputType="numberDecimal"
+                android:padding="20dp"
                 android:hint="Inserte cantidad de monedas, por favor"/>
             <Spinner
                 android:id="@+id/spinnerMonedas"
@@ -54,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
                 android:layout_marginHorizontal="40dp"
-                android:padding="10dp"
+                android:padding="20dp"
                 android:textAlignment="center"
                 android:background="@drawable/spinner_monedas"/>
 <!--            Result -->
