--- a/app/src/main/res/layout/activity_main_cotizacion.xml
+++ b/app/src/main/res/layout/activity_main_cotizacion.xml
@@ -65,16 +65,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/inDescription"
+                    android:padding="20dp"
                     android:hint="Descripción"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/inCarValue"
-                    android:hint="Valor de automóvil"/>
+                    android:hint="Valor de automóvil"
+                    android:padding="20dp"
+                    android:inputType="numberDecimal"/>
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/inInitialPaymentPercentage"
+                    android:inputType="numberDecimal"
+                    android:padding="20dp"
                     android:hint="% Pago inicial"/>
 <!--                Periods -->
                 <LinearLayout
@@ -94,21 +99,25 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/rb12"
+                            android:padding="20dp"
                             android:text="Plazo a 12 meses"/>
                         <RadioButton
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/rb18"
+                            android:padding="20dp"
                             android:text="Plazo a 18 meses"/>
                         <RadioButton
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/rb24"
+                            android:padding="20dp"
                             android:text="Plazo a 24 meses"/>
                         <RadioButton
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/rb36"
+                            android:padding="20dp"
                             android:text="Plazo a 36 meses"/>
                     </RadioGroup>
                 </LinearLayout>
